# dino_2

./: .gitignore  README.md  RELATORIO_FINAL_DINO_SDK.md
dino_arc/: CHANGELOG.md  EXEMPLOS_CLI.md  EXEMPLOS_USO.md  MANIFEST.in  README.md  STATUS_FINAL.md  install.bat  install.sh  pyproject.toml  requirements.txt  setup.py
dino_arc/src/: cli.py
dino_arc/src/databricks_config/: README.md  setup_databricks.bat  setup_databricks.sh  unity_catalog_setup.py
dino_arc/src/sdk/: azure_auth.py  terraform_executor.py  utils.py
dino_arc/src/terraform/: .gitignore  main.tf  main_new.tf  outputs.tf  outputs_new.tf  terraform.tfvars.example  variables.tf  variables_new.tf
dino_arc/src/terraform/modules/databricks/: main.tf  outputs.tf  variables.tf
dino_arc/src/terraform/modules/foundation/: main.tf  outputs.tf  variables.tf
dino_arc/tests/: README.md  __init__.py  test_azure_auth.py  test_cli_integration.py  test_databricks_configurator.py  test_runner.py  test_terraform_executor.py  test_terraform_validation.py
dino_sdk/: ESTRUTURA_SIMPLIFICADA.md  NOVA_ESTRUTURA.md  README_new.md  __init__.py  cli.py  requirements.txt  setup.py  setup_new.py  test_structure.py
dino_sdk/src/: __init__.py  cli.py  genie_assistant.py  ingestion_engine.py
dino_sdk/tests/: __init__.py  run_tests.py  test_genie_assistant.py  test_ingestion_engine.py  test_integration.py  test_workflow_manager.py
